--- a/ui.frontend/src/styles.css
+++ b/ui.frontend/src/styles.css
@@ -41,3 +41,7 @@ p,
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
   color: #000000;
 }
+
+core-placeholder{
+  display:block;
+}
